--- a/src/components/Explanation/Explanation.module.css
+++ b/src/components/Explanation/Explanation.module.css
@@ -1,3 +1,8 @@
+.divEl {
+    display: flex;
+    justify-content: center;
+}
+
 .btnEl {
 	background-color: var(--quintenary) !important;
 	color: var(--primary) !important;
