--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300;400;500;600;700&display=swap');
+
 :root{
   --primary: #48CAE4;
   --secondary: #B23A48;
@@ -8,9 +10,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Radio Canada', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--quintenary)
@@ -29,7 +29,8 @@ main {
 }
 header {
   margin: max(0px, min(8px, calc((100vw - 4px - 100%)
-  * 9999)))
+  * 9999)));
+  font-weight: bold;
 }
 header h1 {
   text-align: center;
