--- a/src/components/History/History.module.css
+++ b/src/components/History/History.module.css
@@ -5,7 +5,8 @@
 }
 
 .cellEl {
-    color: var(--quintenary) !important
+    color: var(--quintenary) !important;
+    padding: 3px 16px !important;
 }
 
 .cellHeadEl {
