--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,8 @@ body {
 }
 
 main {
-	display: flex;
 	padding: 10px;
-	justify-content: space-between;
-	padding: max(0px, min(8px, calc((100vw - 4px - 100%) * 9999)));
+	max-width: 95vw;
 }
 
 footer {
