--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: var(--quintenary);
+	min-height: 100vh;
 }
 
 main {
