--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,9 @@ body {
 	color: var(--quintenary);
 	min-height: 100vh;
 }
-
+div#root {
+	min-height: 125vh;
+}
 main {
 	padding: 10px;
 	max-width: 95vw;
